--- a/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
+++ b/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
@@ -19,22 +19,21 @@
             <!--input 1-->
             <!--input 2-->
             <div class="form-group row ">
+              <label class="col-2 col-form-label  font-weight-bold">Jenis Nomor</label>
               <label class="col-form-label pr-0  font-weight-bold">:</label>
               <div class="col-3 custom-control custom-radio">
                 <!-- Default unchecked -->
                 <div class="custom-control custom-radio">
                   <input type="radio" class="custom-control-input" id="defaultUnchecked" name="defaultExampleRadios"
                     mdbInputDirective>
-            
                   <label class="custom-control-label" for="defaultUnchecked">Nomor Referensi</label>
-                  <label class="col-form-label pr-0  font-weight-bold">:</label>
                 </div>
+
                 <!-- Default checked -->
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="defaultChecked" name="defaultExampleRadios" checked
-                    mdbInputDirective>
+                  <input type="radio" class="custom-control-input" id="defaultChecked" name="defaultExampleRadios"
+                    checked mdbInputDirective>
                   <label class="custom-control-label" for="defaultChecked">Nomor Cheque</label>
-                  <label class="col-form-label pr-0  font-weight-bold">:</label>
                 </div>
               </div>
               <span class="col-6"></span>
