--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -49,6 +49,7 @@
               <a class="dropdown-item" [routerLink]="['/maintenance/tutupuser']">Tutup User</a>
               <a class="dropdown-item" [routerLink]="['/maintenance/gantisandioveride']">Ganti Sandi Over Ride</a>
               <a class="dropdown-item" [routerLink]="['/maintenance/role']">Pencarian Role</a>
+              <a class="dropdown-item" [routerLink]="['/maintenance/refresh']">Refresh User</a>
             </div>
           </div>
 
