--- a/src/app/usermaintenance/refresh-user/refresh-user.component.html
+++ b/src/app/usermaintenance/refresh-user/refresh-user.component.html
@@ -1,44 +1,52 @@
 <!--Main layout-->
 <div class="m-3 h-100">
-    <!-- Start your project here-->
-    <div id="outer" class="d-flex flex-column">
-      <div class="card konten">
-        <div class="card-body">
-         
-          <form>
-              <h5>FORM PENCARIAN ROLE</h5>
-            <mdb-card class="mb-3">
-              <mdb-card-body>
-                <div class="form-group row ">
-                  <label class="col-2 col-form-label font-weight-bold">Masukan Role Di Cari</label>
-                  <label class="col-0 col-form-label">:</label>
-                  <div class="col-3 form-inline">
-                      <div class="input-group">
-                        <input class="form-control" placeholder="Cari Role">
-                        <div class="input-group-append">
-                          <button mat-button color="primary" class="form-control ml-1"><i class="fa fa-search"> Cari</i></button>
-                        </div>
-                      </div>
-                    </div>
-                  <span class="col-2"></span>
-                </div>
-              </mdb-card-body>
-            </mdb-card>
-  
-            <h5>PEMBUATAN ROLE BARU</h5>
-            <mdb-card>
-              <mdb-card-body>
-                  <div class="d-flex justify-content-center">
-                      <button type="button" class="btn btn-primary btn-rounded">Buat Baru</button>
+  <!-- Start your project here-->
+  <div id="outer" class="d-flex flex-column">
+    <div class="card konten">
+      <div class="card-body">
+
+        <form>
+          <h5>Refresh User</h5>
+          <mdb-card class="mb-3">
+            <mdb-card-body>
+              <div class="form-group row ">
+                <label class="col-2 col-form-label font-weight-bold">Kriteria</label>
+                <label class="col-0 col-form-label">:</label>
+                <div class="col-3 pt-2">
+
+                  <!-- radio input -->
+                  <div class="custom-control custom-radio">
+                    <input type="radio" class="custom-control-input" checked mdbInputDirective>
+                    <label class="custom-control-label" for="defaultUnchecked">Teller</label>
                   </div>
-              </mdb-card-body>
-            </mdb-card>
-          </form>
-  
-          <span style="height: 10vh;"></span>
-        </div>
+                  <div class="custom-control custom-radio">
+                    <input type="radio" class="custom-control-input" unchecked mdbInputDirective>
+                    <label class="custom-control-label" for="defaultChecked">Customer Service</label>
+                  </div>
+
+                  <div class="custom-control custom-radio">
+                    <input type="radio" class="custom-control-input" unchecked mdbInputDirective>
+                    <label class="custom-control-label" for="defaultChecked">Head Teller</label>
+                  </div>
+
+                  <div class="custom-control custom-radio">
+                    <input type="radio" class="custom-control-input" unchecked mdbInputDirective>
+                    <label class="custom-control-label" for="defaultChecked">Head Customer Service</label>
+                  </div>
+                  <!-- radio end-->
+
+                </div>
+                <span class="col-2"></span>
+              </div>
+            </mdb-card-body>
+          </mdb-card>
+
+
+        </form>
+
+        <span style="height: 10vh;"></span>
       </div>
     </div>
-  
   </div>
-  
+
+</div>
