--- a/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
+++ b/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
@@ -41,6 +41,14 @@
             <!--input 2-->
             <!--input 3-->
             <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">Isi Nomor</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <div class="col-3"><input type="text" class="form-control"></div>
+                <span class="col-6"></span>
+              </div>
+              <!--input 3-->
+            <!--input 4-->
+            <div class="form-group row">
               <label class="col-2 col-form-label  font-weight-bold">No Rekening</label>
               <label class="col-form-label pr-0  font-weight-bold">:</label>
               <div class="col-3"><input type="text" class="form-control"></div>
