--- a/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
+++ b/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
@@ -32,7 +32,7 @@
                 </table>
                 <div class="d-flex justify-content-center">
                   <button type="button" class="btn btn-primary btn-rounded">Buka</button>
-                  <button type="button" class="btn btn-primary btn-rounded">Tutup Sendiri</button>
+                  <button type="button" class="btn btn-primary btn-rounded">Tutup</button>
                 </div>
               </form>
             </div>
