--- a/src/app/administrative/aktifitasuser/aktifitasuser.component.html
+++ b/src/app/administrative/aktifitasuser/aktifitasuser.component.html
@@ -3,7 +3,7 @@
   <!-- Start your project here-->
   <div class="d-flex flex-column h-100">
     <div id="outer" class="d-flex flex-column flex-grow">
-      <div class="card">
+      <div class="card konten">
         <div class="card-body">
           <h5 class="card-title">Daftar Aktifitas User</h5>
           <!--panel 1-->
