--- a/src/app/passbook/header-passbook/header-passbook.component.html
+++ b/src/app/passbook/header-passbook/header-passbook.component.html
@@ -3,7 +3,7 @@
     <!-- Start your project here-->
     <div class="d-flex flex-column h-100">
       <div id="outer" class="d-flex flex-column flex-grow">
-        <div class="card">
+        <div class="card konten">
           <div class="card-body">
             <h5>FORM CETAK HEADER PASSBOOK</h5>
             <!-- Default form contact -->
