--- a/src/app/usermaintenance/refresh-user/refresh-user.component.html
+++ b/src/app/usermaintenance/refresh-user/refresh-user.component.html
@@ -15,35 +15,39 @@
                 <div class="col-3 pt-2">
 
                   <!-- radio input -->
-                  <div class="form-check ">
-                    <label class="form-check-label" for="radio1">
-                      <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1" checked>
-                      Teller
-                    </label>
+                  <!-- Default inline 1-->
+                  <div class="custom-control custom-radio">
+                    <input type="radio" class="custom-control-input" id="defaultInline1" name="inlineDefaultRadiosExample"
+                      mdbInputDirective>
+                    <label class="custom-control-label" for="defaultInline1">Teller</label>
                   </div>
-                  <div class="form-check">
-                    <label class="form-check-label" for="radio2">
-                      <input type="radio" class="form-check-input" id="radio2" name="optradio" value="option2">
-                      Customer Service
-                    </label>
+
+                  <!-- Default inline 2-->
+                  <div class="custom-control custom-radio">
+                    <input type="radio" class="custom-control-input" id="defaultInline2" name="inlineDefaultRadiosExample"
+                      mdbInputDirective>
+                    <label class="custom-control-label" for="defaultInline2">Customer Service</label>
                   </div>
-                  <div class="form-check">
-                      <label class="form-check-label" for="radio2">
-                        <input type="radio" class="form-check-input" id="radio3" name="optradio" value="option2">
-                        Head Teller
-                      </label>
-                    </div>
-                    <div class="form-check">
-                        <label class="form-check-label" for="radio2">
-                          <input type="radio" class="form-check-input" id="radio4" name="optradio" value="option2">
-                          Head Cutomer Service
-                        </label>
-                      </div>
-                  
+
+                  <!-- Default inline 3-->
+                  <div class="custom-control custom-radio">
+                    <input type="radio" class="custom-control-input" id="defaultInline3" name="inlineDefaultRadiosExample"
+                      mdbInputDirective>
+                    <label class="custom-control-label" for="defaultInline3">Head Teller</label>
+                  </div>
+
+                  <!-- Default inline 4-->
+                  <div class="custom-control custom-radio">
+                    <input type="radio" class="custom-control-input" id="defaultInline4" name="inlineDefaultRadiosExample"
+                      mdbInputDirective>
+                    <label class="custom-control-label" for="defaultInline4">Head Customer Service</label>
+                  </div>
+
+
                   <!-- radio end-->
-                    <br>
+                  <br>
                   <div class="d-flex justify-content-center">
-                      <button type="button" class="btn btn-primary btn-rounded">Refresh User</button>
+                    <button type="button" class="btn btn-primary btn-rounded">Refresh User</button>
                   </div>
 
                 </div>
